--- a/schedule.html
+++ b/schedule.html
@@ -7,4 +7,5 @@ image: schedule.jpg
 
 {% include top-section.html %}
 
-{% include schedule.html %}
+<!-- {% include schedule.html %} -->
+<h3>Details will be announced soon.</h3>
