--- a/workshop.html
+++ b/workshop.html
@@ -6,4 +6,5 @@ permalink: /workshop/
 
  {% include top-section.html %}
  
- {% include workshop.html %}
+ <!-- {% include workshop.html %} -->
+ <h3>Details will be announced soon.</h3>
