Update website for 2020

--- a/schedule.html
+++ b/schedule.html
@@ -7,5 +7,4 @@ image: schedule.jpg
 
 {% include top-section.html %}
 
-<!-- {% include schedule.html %} -->
-<h3>Details will be announced soon.</h3>
+{% include schedule.html %}
