--- a/workshop.html
+++ b/workshop.html
@@ -6,5 +6,4 @@ permalink: /workshop/
 
  {% include top-section.html %}
  
- <!-- {% include workshop.html %} -->
- <h3>Details will be announced soon.</h3>
+ {% include workshop.html %}
